# ai-agent-platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
k8s/base/: api-deployment.yaml  qdrant-deployment.yaml
k8s/monitoring/: prometheus-config.yaml
src/agents/: router.py
src/api/: main.py
src/providers/: claude_provider.py  gemini_provider.py  mock_provider.py
terraform/environments/dev/: main.tf
terraform/modules/eks/: main.tf
terraform/modules/networking/: main.tf
